--- a/Project 1 Data Sandy.ipynb
+++ b/Project 1 Data Sandy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f078be3d",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fa4a3322",
    "metadata": {
     "scrolled": true
@@ -87,7 +87,7 @@
        "4  1/1/2012  169.49"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "007aae98",
    "metadata": {
     "scrolled": false
@@ -204,7 +204,7 @@
        "4      0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "65a308f6",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
        "4  1/1/2010                     434"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "a9bea881",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
        "4     2012-10-22  Cape May, NJ     -2  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "f1bedfc5",
    "metadata": {},
    "outputs": [
@@ -519,7 +519,7 @@
        "4  1/1/2012   4674175"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "30b7bdcc",
    "metadata": {
     "scrolled": true
@@ -629,7 +629,7 @@
        "4 2012-01-01   4674175     Sandy     2012-10-22  Cape May, NJ      0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "1c0975f4",
    "metadata": {
     "scrolled": true
@@ -731,7 +731,7 @@
        "4  5/1/2008                6.5"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "bdb2b502",
    "metadata": {
     "scrolled": true
@@ -841,7 +841,7 @@
        "4 2008-05-01           6.5     Sandy     2012-10-22  Cape May, NJ     -4"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "c79c6885",
    "metadata": {},
    "outputs": [
@@ -941,7 +941,7 @@
        "4  1/1/2012   55175"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "de3330d8",
    "metadata": {},
    "outputs": [
@@ -983,7 +983,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>DATE</th>\n",
-       "      <th>Unemployment</th>\n",
+       "      <th>Median</th>\n",
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
@@ -1041,15 +1041,15 @@
        "</div>"
       ],
       "text/plain": [
-       "        DATE  Unemployment Hurricane Hurricane Date  Location  Delta\n",
-       "0 2008-01-01         54423     Sandy     2012-10-22  Cape May     -4\n",
-       "1 2009-01-01         49797     Sandy     2012-10-22  Cape May     -3\n",
-       "2 2010-01-01         51585     Sandy     2012-10-22  Cape May     -2\n",
-       "3 2011-01-01         52312     Sandy     2012-10-22  Cape May     -1\n",
-       "4 2012-01-01         55175     Sandy     2012-10-22  Cape May      0"
+       "        DATE  Median Hurricane Hurricane Date  Location  Delta\n",
+       "0 2008-01-01   54423     Sandy     2012-10-22  Cape May     -4\n",
+       "1 2009-01-01   49797     Sandy     2012-10-22  Cape May     -3\n",
+       "2 2010-01-01   51585     Sandy     2012-10-22  Cape May     -2\n",
+       "3 2011-01-01   52312     Sandy     2012-10-22  Cape May     -1\n",
+       "4 2012-01-01   55175     Sandy     2012-10-22  Cape May      0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,10 +1073,236 @@
     "\n",
     "Sandy_median_df['Delta'] = Sandy_median_df['Delta'].astype(int)\n",
     "\n",
-    "#Rename column \n",
-    "Sandy_median_df = Sandy_median_df.rename(columns={'Median': 'Unemployment'})\n",
-    "\n",
     "Sandy_median_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b47e2723",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Hurricane</th>\n",
+       "      <th>Hurricane Date</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Delta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2008-01-01</td>\n",
+       "      <td>54423</td>\n",
+       "      <td>Sandy</td>\n",
+       "      <td>2012-10-22</td>\n",
+       "      <td>Cape May</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2009-01-01</td>\n",
+       "      <td>49797</td>\n",
+       "      <td>Sandy</td>\n",
+       "      <td>2012-10-22</td>\n",
+       "      <td>Cape May</td>\n",
+       "      <td>-3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>51585</td>\n",
+       "      <td>Sandy</td>\n",
+       "      <td>2012-10-22</td>\n",
+       "      <td>Cape May</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2011-01-01</td>\n",
+       "      <td>52312</td>\n",
+       "      <td>Sandy</td>\n",
+       "      <td>2012-10-22</td>\n",
+       "      <td>Cape May</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2012-01-01</td>\n",
+       "      <td>55175</td>\n",
+       "      <td>Sandy</td>\n",
+       "      <td>2012-10-22</td>\n",
+       "      <td>Cape May</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        DATE  Median Hurricane Hurricane Date  Location  Delta\n",
+       "0 2008-01-01   54423     Sandy     2012-10-22  Cape May     -4\n",
+       "1 2009-01-01   49797     Sandy     2012-10-22  Cape May     -3\n",
+       "2 2010-01-01   51585     Sandy     2012-10-22  Cape May     -2\n",
+       "3 2011-01-01   52312     Sandy     2012-10-22  Cape May     -1\n",
+       "4 2012-01-01   55175     Sandy     2012-10-22  Cape May      0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#import Econ data from Cape May\n",
+    "\n",
+    "Sandy_6 = \"./Economic Data/CapeMayPopulation.csv\"\n",
+    "\n",
+    "Sandy_population_df = pd.read_csv(Sandy_6)\n",
+    "Sandy_population_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2a01e836",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Hurricane</th>\n",
+       "      <th>Hurricane Date</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Delta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2008-01-01</td>\n",
+       "      <td>96.402</td>\n",
+       "      <td>Sandy</td>\n",
+       "      <td>2012-10-22</td>\n",
+       "      <td>Cape May</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2009-01-01</td>\n",
+       "      <td>96.026</td>\n",
+       "      <td>Sandy</td>\n",
+       "      <td>2012-10-22</td>\n",
+       "      <td>Cape May</td>\n",
+       "      <td>-3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>97.222</td>\n",
+       "      <td>Sandy</td>\n",
+       "      <td>2012-10-22</td>\n",
+       "      <td>Cape May</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2011-01-01</td>\n",
+       "      <td>96.522</td>\n",
+       "      <td>Sandy</td>\n",
+       "      <td>2012-10-22</td>\n",
+       "      <td>Cape May</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2012-01-01</td>\n",
+       "      <td>96.267</td>\n",
+       "      <td>Sandy</td>\n",
+       "      <td>2012-10-22</td>\n",
+       "      <td>Cape May</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        DATE  Population Hurricane Hurricane Date  Location  Delta\n",
+       "0 2008-01-01      96.402     Sandy     2012-10-22  Cape May     -4\n",
+       "1 2009-01-01      96.026     Sandy     2012-10-22  Cape May     -3\n",
+       "2 2010-01-01      97.222     Sandy     2012-10-22  Cape May     -2\n",
+       "3 2011-01-01      96.522     Sandy     2012-10-22  Cape May     -1\n",
+       "4 2012-01-01      96.267     Sandy     2012-10-22  Cape May      0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove rows prior to 1990\n",
+    "\n",
+    "Sandy_population_df['DATE'] = pd.to_datetime(Sandy_population_df['DATE'])\n",
+    "\n",
+    "Sandy_population_df = Sandy_population_df[Sandy_population_df[\"DATE\"] >= '2001-01-01']\n",
+    "\n",
+    "#Add hurricane, year, location\n",
+    "\n",
+    "Sandy_population_df[['Hurricane','Hurricane Date','Location']] = pd.DataFrame([['Sandy','2012-10-22','Cape May']], index = Sandy_population_df.index)\n",
+    "\n",
+    "Sandy_population_df['Hurricane Date'] = pd.to_datetime(Sandy_population_df['Hurricane Date'])\n",
+    "\n",
+    "\n",
+    "#We will need to show data from multiple years, so delta from hurricane best option\n",
+    "Sandy_population_df['Delta'] = ((Sandy_population_df['DATE'] - Sandy_population_df['Hurricane Date']).dt.days/365)\n",
+    "\n",
+    "Sandy_population_df['Delta'] = Sandy_population_df['Delta'].astype(int)\n",
+    "\n",
+    "Sandy_population_df.head()"
    ]
   },
   {
@@ -1104,9 +1330,13 @@
     "  \n",
     "Sandy_housing_df.to_csv(output_data_file4, sep=',')\n",
     "\n",
-    "output_data_file5 = './CleanEconData/Sandy_median_df.csv'\n",
+    "output_data_file5 = './CleanEconData/Sandy_cln_median.csv'\n",
     "  \n",
-    "Sandy_median_df.to_csv(output_data_file4, sep=',')"
+    "Sandy_median_df.to_csv(output_data_file5, sep=',')\n",
+    "\n",
+    "output_data_file6 = './CleanEconData/Sandy_cln_population.csv'\n",
+    "  \n",
+    "Sandy_population_df.to_csv(output_data_file6, sep=',')"
    ]
   },
   {
