start of pop graph

--- a/Project 1 Data Ike.ipynb
+++ b/Project 1 Data Ike.ipynb
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b7d8170a",
    "metadata": {
     "scrolled": true
@@ -512,7 +512,7 @@
        "4  1/1/2005  1141373.7"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "74751679",
    "metadata": {
     "scrolled": false
@@ -622,7 +622,7 @@
        "4 2005-01-01  1141373.7       Ike     2008-09-13  Galveston     -3"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "06c3f813",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
        "4  1990-05-01         6.5"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "fec16976",
    "metadata": {},
    "outputs": [
@@ -830,7 +830,7 @@
        "136 2001-05-01           4.6       Ike     2008-09-13  Galveston     -7"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "c930ac8b",
    "metadata": {},
    "outputs": [
@@ -930,7 +930,7 @@
        "4  1993-01-01              21429"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "59117dbb",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1038,7 @@
        "16 2005-01-01         30146       Ike     2008-09-13  Galveston     -3"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,8 +1070,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "09850f2a",
+   "execution_count": 12,
+   "id": "da5028ad",
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,7 @@
        "4  1/1/2005     274.354"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,8 +1155,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "8251fa10",
+   "execution_count": 13,
+   "id": "171c4b36",
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1181,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>DATE</th>\n",
-       "      <th>Median Income</th>\n",
+       "      <th>Population</th>\n",
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
@@ -1239,15 +1239,15 @@
        "</div>"
       ],
       "text/plain": [
-       "        DATE  Median Income Hurricane Hurricane Date   Location  Delta\n",
-       "0 2001-01-01        254.502       Ike     2008-09-13  Galveston     -7\n",
-       "1 2002-01-01        260.034       Ike     2008-09-13  Galveston     -6\n",
-       "2 2003-01-01        265.120       Ike     2008-09-13  Galveston     -5\n",
-       "3 2004-01-01        269.458       Ike     2008-09-13  Galveston     -4\n",
-       "4 2005-01-01        274.354       Ike     2008-09-13  Galveston     -3"
+       "        DATE  Population Hurricane Hurricane Date   Location  Delta\n",
+       "0 2001-01-01     254.502       Ike     2008-09-13  Galveston     -7\n",
+       "1 2002-01-01     260.034       Ike     2008-09-13  Galveston     -6\n",
+       "2 2003-01-01     265.120       Ike     2008-09-13  Galveston     -5\n",
+       "3 2004-01-01     269.458       Ike     2008-09-13  Galveston     -4\n",
+       "4 2005-01-01     274.354       Ike     2008-09-13  Galveston     -3"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "aea1c14e",
    "metadata": {},
    "outputs": [],
@@ -1304,7 +1304,11 @@
     "\n",
     "output_data_file5 = './CleanEconData/Ike_median_df.csv'\n",
     "  \n",
-    "Ike_median_df.to_csv(output_data_file4, sep=',')"
+    "Ike_median_df.to_csv(output_data_file5, sep=',')\n",
+    "\n",
+    "output_data_file6 = './CleanEconData/Ike_Pop_df.csv'\n",
+    "  \n",
+    "Ike_Pop_df.to_csv(output_data_file6, sep=',')"
    ]
   },
   {
